header banner added

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,10 +10,239 @@
 	<!--font awesome-->
 	<script src="https://kit.fontawesome.com/4de5dd67f7.js" crossorigin="anonymous"></script>
 </head>
+
 <body>
 	<header>
-		
+
 	</header>
-	
+	<main>
+		<div class="container">
+			<div class="first-banner">
+				<div class="banner-description">
+					<h2>Start your Journey as
+					</h2>
+					<h2>Influencer</h2>
+					<p>Influencer marketing is a hot marketing phenomenon that everyone is talking about. It has becomea
+						mainstream marketing tactic.</p>
+					<div class="button-design">
+						<a href="#">Preebook Now</a>
+						<i class="fas fa-arrow-right"></i>
+					</div>
+				</div>
+				<img src="images/main-camera.png" alt="">
+			</div>
+		</div>
+		<!--section-2-->
+		<section class="container">
+			<div class="card-border">
+				<h2 class="card-title">Popular Collection</h2>
+				<div class="cards">
+					<div class="card">
+						<div class="card-img">
+							<img src="images/tripod.png" alt="">
+							<div class="card-des">
+								<h4>Flex Tripod</h4>
+								<p>$50.48</p>
+								<div class="icons">
+									<i class="fas fa-star"></i>
+									<i class="fas fa-star"></i>
+									<i class="fas fa-star"></i>
+									<i class="fas fa-star"></i>
+									<i class="fas fa-star empty"></i>
+									<span>4.99</span>
+								</div>
+								<div class="icon-des">
+									<small>Wordwide shifting<span> available</span>
+										Buyers protection possible!</small>
+								</div>
+							</div>
+						</div>
+					</div>
+					<!--card-2-->
+					<div class="card">
+						<div class="card-img">
+							<img src="images/mic.png" alt="">
+							<div class="card-des">
+								<h4>Microphone</h4>
+								<p>$120.25</p>
+								<div class="icons">
+									<i class="fas fa-star"></i>
+									<i class="fas fa-star"></i>
+									<i class="fas fa-star"></i>
+									<i class="fas fa-star"></i>
+									<i class="fas fa-star empty"></i>
+									<span>4.99</span>
+								</div>
+								<div class="icon-des">
+									<small>Wordwide shifting<span> available</span>
+										Buyers protection possible!</small>
+								</div>
+							</div>
+						</div>
+					</div>
+					<!--card-3-->
+					<div class="card">
+						<div class="card-img">
+							<img src="images/airpod.png" alt="">
+							<div class="card-des">
+								<h4>Airbuds</h4>
+								<p>$100.00</p>
+								<div class="icons">
+									<i class="fas fa-star"></i>
+									<i class="fas fa-star"></i>
+									<i class="fas fa-star"></i>
+									<i class="fas fa-star"></i>
+									<i class="fas fa-star empty"></i>
+									<span>4.99</span>
+								</div>
+								<div class="icon-des">
+									<small>Wordwide shifting<span> available</span>
+										Buyers protection possible!</small>
+								</div>
+							</div>
+						</div>
+					</div>
+					<!--card-4-->
+					<div class="card">
+						<div class="card-img">
+							<img src="images/drone.png" alt="">
+							<div class="card-des">
+								<h4>Drone</h4>
+								<p>$980.25</p>
+								<div class="icons">
+									<i class="fas fa-star"></i>
+									<i class="fas fa-star"></i>
+									<i class="fas fa-star"></i>
+									<i class="fas fa-star"></i>
+									<i class="fas fa-star empty"></i>
+									<span>4.99</span>
+								</div>
+								<div class="icon-des">
+									<small>Wordwide shifting<span> available</span>
+										Buyers protection possible!</small>
+								</div>
+							</div>
+						</div>
+					</div>
+					<!--card-5-->
+					<div class="card">
+						<div class="card-img">
+							<img src="images/lights.png" alt="">
+							<div class="card-des">
+								<h4>Light Setup</h4>
+								<p>$1200.00</p>
+								<div class="icons">
+									<i class="fas fa-star"></i>
+									<i class="fas fa-star"></i>
+									<i class="fas fa-star"></i>
+									<i class="fas fa-star"></i>
+									<i class="fas fa-star empty"></i>
+									<span>4.99</span>
+								</div>
+								<div class="icon-des">
+									<small>Wordwide shifting<span> available</span>
+										Buyers protection possible!</small>
+								</div>
+							</div>
+						</div>
+					</div>
+					<!--card-6-->
+					<div class="card">
+						<div class="card-img">
+							<img src="images/setup.png" alt="">
+							<div class="card-des">
+								<h4>Photoshoot set</h4>
+								<p>$$820.40</p>
+								<div class="icons">
+									<i class="fas fa-star"></i>
+									<i class="fas fa-star"></i>
+									<i class="fas fa-star"></i>
+									<i class="fas fa-star"></i>
+									<i class="fas fa-star empty"></i>
+									<span>4.99</span>
+								</div>
+								<div class="icon-des">
+									<small>Wordwide shifting<span> available</span>
+										Buyers protection possible!</small>
+								</div>
+							</div>
+						</div>
+					</div>
+					<!--card-7-->
+					<div class="card">
+						<div class="card-img">
+							<img src="images/camera.png" alt="">
+							<div class="card-des">
+								<h4>Vlogging Camera</h4>
+								<p>$$1800.80</p>
+								<div class="icons">
+									<i class="fas fa-star"></i>
+									<i class="fas fa-star"></i>
+									<i class="fas fa-star"></i>
+									<i class="fas fa-star"></i>
+									<i class="fas fa-star empty"></i>
+									<span>4.99</span>
+								</div>
+								<div class="icon-des">
+									<small>Wordwide shifting<span> available</span>
+										Buyers protection possible!</small>
+								</div>
+							</div>
+						</div>
+					</div>
+					<!--card-8-->
+					<div class="card">
+						<div class="card-img">
+							<img src="images/single-light.png" alt="">
+							<div class="card-des">
+								<h4>Green Screen</h4>
+								<p>$$25.48</p>
+								<div class="icons">
+									<i class="fas fa-star"></i>
+									<i class="fas fa-star"></i>
+									<i class="fas fa-star"></i>
+									<i class="fas fa-star"></i>
+									<i class="fas fa-star empty"></i>
+									<span>4.99</span>
+								</div>
+								<div class="icon-des">
+									<small>Wordwide shifting<span> available</span>
+										Buyers protection possible!</small>
+								</div>
+							</div>
+						</div>
+					</div>
+					<!--card-9-->
+					<div class="card">
+						<div class="card-img">
+							<img src="images/action.png" alt="">
+							<div class="card-des">
+								<h4>Action Camera</h4>
+								<p>$380.00</p>
+								<div class="icons">
+									<i class="fas fa-star"></i>
+									<i class="fas fa-star"></i>
+									<i class="fas fa-star"></i>
+									<i class="fas fa-star"></i>
+									<i class="fas fa-star empty"></i>
+									<span>4.99</span>
+								</div>
+								<div class="icon-des">
+									<small>Wordwide shifting<span> available</span>
+										Buyers protection possible!</small>
+								</div>
+							</div>
+						</div>
+					</div>
+					<!--card -end-->
+				</div>
+				<div class="right-button">
+					<a href="">see more</a>
+					<i class="fas fa-arrow-right"></i>
+				</div>
+			</div>
+		</section>
+	</main>
 </body>
+
 </html>
